client/manifest/index.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-basic
  name: frontend-basic-deployment
  namespace: basic-app
spec:
  replicas: 2
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: frontend-basic
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-basic
      namespace: basic-app
    spec:
      containers:
        - image: winder510/fe-basic-app
          imagePullPolicy: Always
          name: frontend-basic
          ports:
            - containerPort: 80
              name: tcp
              protocol: TCP
          resources: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-basic-ingress
  namespace: basic-app
spec:
  ingressClassName: nginx
  rules:
    - host: frontend-basic.hgp.vn
      http:
        paths:
          - backend:
              service:
                name: frontend-basic-service
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-basic-service
  namespace: basic-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend-basic
  type: ClusterIP
